--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@fluentui/react-components": "^9.66.5",
+    "@fluentui/react-icons": "^2.0.305",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.1.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
